--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
 
           <div class="features-grid" id="features">
             <div class="feature-box">
-              <img src="/images/resort_11649477.svg" alt="Stay Icon">
+              <img src="images/resort_11649477.svg" alt="Stay Icon">
               <h3>Resorts & Homestays</h3>
               <p>Comfortable and affordable options selected for scenic views, safety, and hospitality.</p>
             </div>
 
             <div class="feature-box">
-              <img src="/images/weekend-trip_16999359.svg" alt="Travel Icon">
+              <img src="images/weekend-trip_16999359.svg" alt="Travel Icon">
               <h3>Travel Arrangements</h3>
               <p>Cab, jeep safari, trekking guides, and transport to all major tourist attractions.</p>
             </div>
 
             <div class="feature-box">
-              <img src="/images/verified_1516626.svg" alt="Guide Icon">
+              <img src="images/verified_1516626.svg" alt="Guide Icon">
               <h3>Local Expertise</h3>
               <p>Experience Wayanad like a local — hidden waterfalls, culture, food & nature trails.</p>
             </div>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="about-image">
-          <img src="/images/Resorts.jpg" alt="Wayanad Landscape">
+          <img src="images/Resorts.jpg" alt="Wayanad Landscape">
         </div>
 
       </div>
@@ -91,7 +91,7 @@
       <div class="destinations-grid">
 
         <div class="destination-card">
-          <img src="/images/hilltop.jpg" alt="Chembra Peak">
+          <img src="images/hilltop.jpg" alt="Chembra Peak">
           <h3>Chembra Peak</h3>
           <p>
             Famous for the heart-shaped lake and panoramic hill views. Perfect for trekking
@@ -101,7 +101,7 @@
 
 
         <div class="destination-card">
-          <img src="/images/Dam2.jpg" alt="Banasura Sagar Dam">
+          <img src="images/Dam2.jpg" alt="Banasura Sagar Dam">
           <h3>Banasura Sagar Dam</h3>
           <p>
             India's largest earth dam surrounded by misty hills — ideal for boating,
@@ -110,7 +110,7 @@
         </div>
 
         <div class="destination-card">
-          <img src="/images/Cave.jpg" alt="Edakkal Caves">
+          <img src="images/Cave.jpg" alt="Edakkal Caves">
           <h3>Edakkal Caves</h3>
           <p>
             Ancient caves with historic carvings and an exciting uphill trek. A must-visit
@@ -177,10 +177,10 @@
       <div class="footer-social">
         <h4>Follow Us</h4>
         <div class="social-icons">
-          <a href="#"><img src="/images/web_3059997.svg" width="30px"></a>
-          <a href="#"><img src="/images/video_12942219.svg" width="30px"></a>
-          <a href="#"><img src="/images/facebook_1076990.svg" width="30px"></a>
-          <a href="#"><img src="/images/instagram_3955027.svg" width="30px"></a>
+          <a href="#"><img src="images/web_3059997.svg" width="30px"></a>
+          <a href="#"><img src="images/video_12942219.svg" width="30px"></a>
+          <a href="#"><img src="images/facebook_1076990.svg" width="30px"></a>
+          <a href="#"><img src="images/instagram_3955027.svg" width="30px"></a>
         </div>
       </div>
 
